--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -25,7 +25,7 @@
                     
                     <div class="clear"></div>
 
-                    <div class="splash container single backshadow">
+                    <div class="splash container single">
 
                         <div class="header">
                             
@@ -111,7 +111,7 @@
                         
                     </div>
 
-                    <div class="splash container single backshadow">
+                    <div class="splash container single">
 
                         <div class="header">
                             
@@ -175,7 +175,7 @@
                         
                     </div>
 
-                    <div class="splash container single backshadow">
+                    <div class="splash container single">
 
                         <div class="header">
                             
@@ -236,7 +236,7 @@
                         
                     </div>
 
-                    <div class="splash container single backshadow">
+                    <div class="splash container single">
 
                         <div class="header">
                             
