Some random changes in scripts and stylesheets

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -186,13 +186,12 @@
                 </div>
                 <div id="menu_wrapper">
                     <ul id="menu">
+                        <li><a href="<?php echo $this->basePath(''); ?>" class="ajax"><img src="/img/ui/icons/home_white.svg" alt="Hem"><span>hem</span></a></li>
                         <li><a href="#produkter" data-sidebar="open" data-for="products" data-toggle="true"><img src="/img/ui/icons/menu_white.svg" alt="Produkter"><span>produkter</span></a></li>
                         <li><a href="#information" data-sidebar="open" data-for="information" data-toggle="true"><img src="/img/ui/icons/information_white.svg" alt="Information"><span>information</span></a></li>
                         <li><a href="#varukorg" data-sidebar="open" data-for="varukorg" data-toggle="true"><img src="/img/ui/icons/shopping_trolley_white.svg" alt="Varukorg"><span>varukorg</span></a></li>
-                        <!--
-                        <li><a href="#user_account" data-sidebar="open" data-for="user_account" data-toggle="true"><img src="/img/ui/icons/user_white.svg" alt="Användarkonto"><span>Användarkonto</span></a></li>
-                        -->
-                        <li class="search"><a href="#search" data-sidebar="open" data-for="search" data-toggle="true"><img src="/img/ui/icons/magnifying_glass_white.svg" alt="Sök"><span>sök</span></a></li>
+                        <li><a href="#user_account" data-sidebar="open" data-for="user_account" data-toggle="true"><img src="/img/ui/icons/user_white.svg" alt="Användarkonto"><span>konto</span></a></li>
+                        <li><a href="#search" data-sidebar="open" data-for="search" data-toggle="true"><img src="/img/ui/icons/magnifying_glass_white.svg" alt="Sök"><span>sök</span></a></li>
                         <div style="clear: both;"></div>
                     </ul>
                 </div>
