--- a/module/Products/view/products/seo/seo.phtml
+++ b/module/Products/view/products/seo/seo.phtml
@@ -77,65 +77,8 @@
                         </div>
 
                         <div class="clear"></div>
-
-                        <div class="image carousel_wrapper">
-                            <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
-                            
-                            <div class="prev">
-                                <a href="#prev"> <img src="/plugins/ldscarousel/img/prev-arrow.png" /> </a>
-                            </div>
-                            
-                            <div class="carousel">
-                                
-                                <ul>
-                                    <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" data-fancybox-group="roll_up_classic_carousel" title="Roll-Up Classic" class="fancybox">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="focus">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_mekanik.png'); ?>" data-fancybox-group="roll_up_classic_carousel" title="Roll-Up Classic, Mekanik" class="fancybox">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_mekanik.png'); ?>" alt="Roll-Up Classic" class="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_komponenter.png'); ?>" data-fancybox-group="roll_up_classic_carousel" title="Roll-Up Classic, Komponenter" class="fancybox">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_komponenter.png'); ?>" alt="Roll-Up Classic" class="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" data-fancybox-group="roll_up_classic_carousel" class="fancybox">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" data-fancybox-group="roll_up_classic_carousel" class="fancybox">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" alt="Roll-Up Classic" class="">
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="//www.youtube.com/embed/40p-DopZBXI?rel=0&autoplay=1&controls=0" data-fancybox-group="roll_up_classic_carousel" class="various fancybox" data-fancybox-type="iframe">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large_video.png'); ?>" alt="Roll-Up Classic" class="">
-                                        </a>
-                                    </li>
-                                </ul>
-                                
-                            </div>
-                            
-                            <div class="next">
-                                <a href="#next"> <img src="/plugins/ldscarousel/img/next-arrow.png" /> </a>
-                            </div>
-                                
-                            <div class="navigation">
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>" class="focus"><span></span></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
-                                <a href="<?php echo $this->basePath('img/produkter/rollup_classic_large.png'); ?>"><span></span></a>
-                            </div>
-                            
-                        </div>
+                        
+                        <?php echo $this->partial('products/helper/carousel', array( 'media' => $value['media'] ) ); ?>
 
                         <div class="clear"></div>
 
@@ -160,7 +103,7 @@
                                 
                                 <div id="beskrivning" class="content_data active">
                                     <div class="columns_two">
-                                        <h4>Beskrivning</h4>
+                                        <h4><?php echo( $value['product_name'] ); ?></h4>
                                         <?php
                                             $paragraphs = explode( "\r\n\r\n" , $value['product_description'] );
                                             
@@ -182,7 +125,7 @@
                                                     Produkt / Antal
                                                 </td>
                                                 <td>
-                                                    Pris
+                                                    Styckpris
                                                 </td>
                                             </tr>
                                         </thead>
@@ -245,6 +188,9 @@
                                       <h4>Specifikationer</h4>
                                       
                                       <p>Bacon</p>
+                                      <?php
+                                        echo( print_r( $value['media'] ) );
+                                      ?>
                                 </div>
                             
                             </div>
