--- a/module/Products/view/products/helper/carousel.phtml
+++ b/module/Products/view/products/helper/carousel.phtml
@@ -3,7 +3,7 @@
                         <div class="image carousel_wrapper">
                             <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
                             
-                            <div class="prev">
+                            <div class="prev lds_carousel_ui">
                                 <a href="#prev"> <img src="/plugins/ldscarousel/img/prev-arrow.png" /> </a>
                             </div>
                             
@@ -13,11 +13,19 @@
                                 <?php foreach($this->media as $media) : ?>
                                     
                                     <?php if($media['external_media'] == 'y') : ?>
-                                    <li>
-                                        <a href="<?php echo($media['file_media']) ?>" data-fancybox-group="product_image_carousel" class="various fancybox" data-fancybox-type="iframe">
-                                            <img src="<?php echo $this->basePath('img/produkter/rollup_classic_large_video.png'); ?>" alt="<?php echo( $media['name_media'] ) ?>" class="<?php if( $media['primary_media'] == 'y' ){ echo('focus'); } ?>">
-                                        </a>
-                                    </li>
+                                        <?php if( $media['type_media'] == 'youtube' ) : ?>
+                                        <li>
+                                            <a href="http://www.youtube.com/embed/<?php echo($media['file_media']) ?>?rel=0&autoplay=1&controls=1" data-fancybox-group="product_image_carousel" title="<?php echo( $media['name_media'] ) ?>" class="various fancybox" data-fancybox-type="iframe">
+                                                <img src="http://img.youtube.com/vi/<?php echo($media['file_media']) ?>/mqdefault.jpg" alt="<?php echo( $media['name_media'] ) ?>" class="youtube<?php if( $media['primary_media'] == 'y' ){ echo(' focus'); } ?>">
+                                            </a>
+                                        </li>
+                                        <?php else : ?>
+                                        <li>
+                                            <a href="<?php echo($media['file_media']) ?>" data-fancybox-group="product_image_carousel" title="<?php echo( $media['name_media'] ) ?>" class="fancybox">
+                                                <img src="<?php echo($media['file_media']) ?>" alt="<?php echo( $media['name_media'] ) ?>" class="<?php if( $media['primary_media'] == 'y' ){ echo('focus'); } ?>">
+                                            </a>
+                                        </li>
+                                        <?php endif; ?>
                                     <?php else: ?>
                                     <li>
                                         <a href="<?php echo $this->basePath('media/upload/'.$media['file_media']); ?>" data-fancybox-group="product_image_carousel" title="<?php echo( $media['name_media'] ) ?>" class="fancybox">
@@ -30,11 +38,11 @@
                                 
                             </div>
                             
-                            <div class="next">
+                            <div class="next lds_carousel_ui">
                                 <a href="#next"> <img src="/plugins/ldscarousel/img/next-arrow.png" /> </a>
                             </div>
                                 
-                            <div class="navigation">
+                            <div class="navigation lds_carousel_ui">
                                 <?php foreach($this->media as $media) : ?>
                                 <a href="#" class="<?php if( $media['primary_media'] == 'y' ){ echo('focus'); } ?>"><span></span></a>
                                 <?php endforeach; ?>
